<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/screen_horizontal_margin"
        android:paddingEnd="@dimen/screen_horizontal_margin"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/header_title_size"
        android:textStyle="bold"
        android:translationY="@dimen/header_title_offset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/screen_top_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            style="@style/MainScreenButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_spacing" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediaLibraryButton"
            style="@style/MainScreenButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_spacing" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            style="@style/MainScreenButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/ic_gears" />

    </LinearLayout>

</LinearLayout>